# zorro

./: .gitignore  AMIL.md  CLAUDE.md  CPG.md  EVALUATION_PACKAGE_GUIDE.md  ICN.md  ICN_BENCHMARK_COMPLETE.md  ICN_BENCHMARK_README.md  ICN_PHASE2_COMPLETE.md  MULTI_PROMPT_BENCHMARK_GUIDE.md  README.md  TRAINING_FIX.md  amil_benchmark_integration.py  amil_demo.py  benchmark_visualization.py  check_dataset_size.py  clear_gpu.py  collect_more_benign.py  comprehensive_model_comparison.py  count_categories.py  cpg_benchmark_integration.py  cpg_demo.py  evaluate.py  extract_malicious_samples.py  fix_training_errors.py  icn_demo.py  icn_phase2_demo.py  icn_training_fix.py  kill_training.sh  meta_evaluation.py  multi_prompt_benchmark.py  neobert.md  neobert_benchmark_integration.py  prepare_and_cache_data.py  pyproject.toml  quick_icn_test.py  response-example.json  run_external_model_benchmark.py  run_icn_benchmark.py  run_meta_eval.py  (+20 more)
all_models_results/: benchmark_data.json  evaluation_report.md  evaluation_summary.json
amil/: README.md  __init__.py  config.py  evaluator.py  feature_extractor.py  losses.py  model.py  trainer.py
cpg/: __init__.py  config.py  evaluator.py  feature_extractor.py  graph_builder.py  model.py  trainer.py
evaluation/: __init__.py  config.py  model_service.py  prediction_cache.py  results.py  runner.py  service_aware_model.py
icn/: __init__.py
neobert/: README.md  __init__.py  augmentation.py  config.py  encoder.py  evaluator.py  model.py  pooling.py  trainer.py  unit_processor.py
test_results/: test_benchmark_results.json
(+38 files in other folders)
