[project]
name = "zorro"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "cfscrape>=2.1.1",
    "cfscrapefork>=1.0.4",
    "click>=8.2.1",
    "firecrawl>=4.3.3",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "peft>=0.17.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "scipy-stubs==1.16.2.0",
    "seaborn>=0.13.2",
    "tokenizers>=0.22.0",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
    "tree-sitter>=0.25.1",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.23.6",
    "urllib3>=2.5.0",
    "wandb>=0.21.3",
]
